# synthetic-probability

./: LICENSE  README.md  stack.yaml  synthetic-probability.cabal
src/: SyntheticProbability.hs
