name:                synthetic-probability
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/synthetic-probability#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2020 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     SyntheticProbability
  build-depends:       base >= 4.7 && < 5, mtl, numeric-tools >= 0.2.0.1
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/synthetic-probability
